[build-system]
requires = [
    "setuptools>=43.0.0",
    "wheel"
]
build-backend = "setuptools.build_meta"


[project]
name = "objm"
description = "objects modules"
version = "1"
authors = [
    {name = "Bart Thate", email = "rssbotd@gmail.com"},
]
readme = "README.rst"
license = {text="Public Domain"}
dependancies = [
    "objx",
]
classifiers = [ 
    'Development Status :: 3 - Alpha',
    'License :: Public Domain',
    'Operating System :: Unix',
    'Programming Language :: Python',
    'Topic :: Utilities'
]


[project.urls]
"home" = "https://pypi.org/project/objm"
"bugs" = "https://github.com/xobjectz/objm/issues"
"source" = "https://github.com/xobjectz/objm"


[tool.setuptools]
packages = [
    'objm',
]
zip-safe=true


[tool.setuptools.data-files]
"share/doc/objm" = [
    "README.rst"
]

[tool.setuptools.exclude-package-data]
"*" = [
       "env*",
       "html*",
       "test*"
      ]
